# datasheet

./: .gitignore  AI_Agent_Framework_guide.md  Dockerfile  Makefile  README.md  datasheet_yang_perlu.txt  docker-compose.yaml  docker-compose.yml  guide_awal.md  main.py  pyproject.toml  requirements.txt  setup.py
config/: config.yaml  sources.yaml
data/final/: test.json  val.json
notebooks/: usage_examples.ipynb
redteam_agent/: QUICKSTART_LLM.md  README.md  requirements.txt  setup.py
redteam_agent/agent/: __init__.py
redteam_agent/agent/core/: __init__.py  agent.py  executor.py  memory.py  observer.py  planner.py  reporter.py  task_queue.py  workflow.py  workflow_loader.py
redteam_agent/agent/llm/: __init__.py  parser.py  prompts.py  provider.py
redteam_agent/agent/security/: __init__.py  engagement.py  gate.py
redteam_agent/agent/tools/: __init__.py  base.py  registry.py
redteam_agent/agent/tools/analyzer/: __init__.py  csp_analyzer.py  js_analyzer.py  pattern_matcher.py  response_analyzer.py  skimmer_detect.py
redteam_agent/agent/tools/recon/: __init__.py  dns.py  http_client.py  nmap.py  tech_detect.py  whois.py
redteam_agent/agent/tools/reporter/: __init__.py  report_generator.py
redteam_agent/agent/tools/scanner/: __init__.py  ffuf.py  gobuster.py  header_scanner.py  nuclei.py  ssl_scanner.py
redteam_agent/agent/utils/: __init__.py  config.py  logger.py  pattern_loader.py
redteam_agent/configs/: agent_config.yaml  config.yaml  engagement.yaml  tools_config.yaml
redteam_agent/configs/patterns/: sensitive_data.yaml  skimmer_patterns.yaml  vulnerability_patterns.yaml
redteam_agent/configs/workflows/: api_security.yaml  full_assessment.yaml  payment_assessment.yaml  quick_recon.yaml
redteam_agent/scripts/: __init__.py  cli.py  interactive.py  interactive_mode.py  run_agent.py  serve_api.py  test_llm.py
redteam_agent/tests/: __init__.py  test_agent.py  test_phase3.py
scripts/: init_db.sql  view_data.py
server_scripts/: chat.py  monitor.py  setup.sh  simple_monitor.py  train.py  train_fixed.py  training_config.yaml
src/: __init__.py
src/generators/: __init__.py  augmentation.py  qa_generator.py
src/processors/: __init__.py  batch_processor.py  category_classifier.py  content_cleaner.py  data_augmenter.py  data_validator.py  dataset_exporter.py  deduplicator.py  format_converter.py  quality_checker.py
src/scrapers/: __init__.py  base_scraper.py  ctf_writeup_scraper.py  cve_scraper.py  exploit_db_scraper.py  hacktricks_scraper.py  mitre_attack_scraper.py  nuclei_templates_scraper.py  owasp_scraper.py  payloads_scraper.py  portswigger_scraper.py  sansec_scraper.py
src/utils/: __init__.py  analytics.py  cache.py  config.py  github_helper.py  logger.py  proxy_manager.py  rate_limiter.py  retry.py
tests/: test_processors.py  test_scrapers.py  test_utils.py
